# memorize

./: .gitignore  .gitmodules  CLAUDE.md  NOTICE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
patches/: 0001-expose-progress-module.patch  0002-tolerate-missing-original-size-header.patch  0003-expose-graph-data-for-search.patch  0004-paren-wrap-did-search-or-clause.patch
scripts/: apply-vendor-patches.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  progress.rs  render.rs  state.rs
src-tauri/src/commands/: app.rs  backup.rs  cards.rs  collection.rs  csv.rs  decks.rs  dev.rs  lookup.rs  mod.rs  nani.rs  notes.rs  package.rs  reviewer.rs  speech.rs  study.rs  sync.rs
src-tauri/src/commands/decks/: graphs.rs  mod.rs  stats.rs
src/lib/: ipc.ts  storage-keys.test.ts  storage-keys.ts  updater-progress.test.ts  updater-progress.ts  updater.ts
src/lib/actions/: draggable.test.ts  draggable.ts
src/lib/components/: AnkiDesktopSuggestion.svelte  CardFrame.svelte  ContextMenu.svelte  ImportPreviewModal.svelte  Launcher.svelte  NoteEditor.svelte  PageTransition.svelte  RangeTabs.svelte  Sidebar.svelte  SpeechControls.svelte  TitleBar.svelte  ToggleSwitch.svelte
src/lib/components/charts/: ButtonsChart.svelte  CalendarHeatmap.svelte  CardCountsPie.svelte  FutureDueChart.svelte  HistogramChart.svelte  HoursChart.svelte  RetentionTable.svelte  StackedBarChart.svelte  chart-utils.test.ts  chart-utils.ts
src/lib/components/home/: StatsPanelGrid.svelte  WelcomeScreen.svelte
src/lib/components/reviewer/: AudioSettingsPopover.svelte  CardStage.svelte  CopyToast.svelte  DoneScreen.svelte  RatingBar.svelte  ReviewActionButton.svelte  ReviewHeader.svelte
src/lib/components/settings/: AppearanceSection.svelte  BackupSection.svelte  CollectionSection.svelte  ImportExportSection.svelte  LanguageSection.svelte  SettingRow.svelte  SettingsSection.svelte  SettingsToc.svelte  ShortcutsSection.svelte  SpeechSection.svelte  StartupSection.svelte  SyncSection.svelte  UpdatesCard.svelte
src/lib/i18n/: i18n.test.ts  index.svelte.ts  messages.ts
src/lib/reviewer/: answer-html.test.ts  answer-html.ts  copy-nani.ts  frame-text.test.ts  frame-text.ts  hidden-overlay.test.ts  hidden-overlay.ts  render.test.ts  render.ts  session.svelte.ts  speak.ts  speech-cycle.svelte.ts  speech-cycle.test.ts  totals.test.ts  totals.ts  types.ts
src/lib/stats/: transform.test.ts  transform.ts  types.ts
src/lib/stores/: collection.svelte.test.ts  collection.svelte.ts  deck-order.svelte.test.ts  deck-order.svelte.ts  import-flow.svelte.test.ts  import-flow.svelte.ts  notes.svelte.test.ts  notes.svelte.ts  package.svelte.test.ts  package.svelte.ts  run-async.test.ts  run-async.ts  shortcuts.svelte.ts  shortcuts.test.ts  speech.svelte.test.ts  speech.svelte.ts  sync.svelte.test.ts  sync.svelte.ts  theme.svelte.ts
src/lib/utils/: keyboard.test.ts  keyboard.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/browse/: +page.svelte
src/routes/review/[deckId]/: +page.svelte
src/routes/settings/: +page.svelte
test/mocks/: app-environment.ts
