[package]
name = "memorize"
version = "0.1.0"
description = "Anki-compatible English vocabulary learning app"
authors = ["iQeda"]
edition = "2021"
rust-version = "1.92"

[lib]
name = "memorize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"

# rslib (Anki core) — points into the git submodule. The submodule's parent
# Cargo.toml acts as the workspace root for `anki` and its sibling crates,
# so this crate must NOT declare its own [workspace].
anki = { path = "../vendor/anki/rslib", default-features = false, features = ["rustls"] }
anki_proto = { path = "../vendor/anki/rslib/proto" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
chrono = "0.4"
dirs = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
