[package]
name = "memorize"
version = "0.4.22"
description = "Anki-compatible English vocabulary learning app"
authors = ["iQeda"]
edition = "2021"
rust-version = "1.92"

[lib]
name = "memorize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-autostart = "2.2"
tauri-plugin-updater = "2.2"
tauri-plugin-process = "2.2"

# rslib (Anki core) — points into the git submodule. The submodule's parent
# Cargo.toml acts as the workspace root for `anki` and its sibling crates,
# so this crate must NOT declare its own [workspace].
anki = { path = "../vendor/anki/rslib", default-features = false, features = ["rustls"] }
anki_proto = { path = "../vendor/anki/rslib/proto" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
chrono = "0.4"
dirs = "6"

# macOS の Quartz Event Services (CGEventCreateKeyboardEvent / CGEventPost) を
# 使って Cmd+J を合成する。Apple Events 経由 (osascript) と違い、本番ビルド
# (Hardened Runtime + ad-hoc 署名 + entitlement 空) でも動作する。代わりに
# アクセシビリティ権限 (System Settings → Privacy & Security → Accessibility)
# が必要で、初回 keystroke 送信時に OS が許可プロンプトを出す。
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[features]
custom-protocol = ["tauri/custom-protocol"]
