[package]
name = "memorize"
version = "0.6.1"
description = "Anki-compatible English vocabulary learning app"
authors = ["iQeda"]
edition = "2021"
rust-version = "1.92"

[lib]
name = "memorize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-autostart = "2.2"
tauri-plugin-updater = "2.2"
tauri-plugin-process = "2.2"

# rslib (Anki core) — points into the git submodule. The submodule's parent
# Cargo.toml acts as the workspace root for `anki` and its sibling crates,
# so this crate must NOT declare its own [workspace].
anki = { path = "../vendor/anki/rslib", default-features = false, features = ["rustls"] }
anki_proto = { path = "../vendor/anki/rslib/proto" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
chrono = "0.4"
dirs = "6"
# Match the version anki uses so we share the same rusqlite::Connection type
# when pulling `col.storage.db()` into our own queries.
rusqlite = { version = "0.36.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[features]
# tauri-cli が `tauri build` 時に `--features custom-protocol` で外部から有効化する。
# repo 内 grep でヒットしなくても削除禁止 — 消すと本番 DMG ビルドが壊れる
# (dev/test の検証ゲートでは検出できない)。
custom-protocol = ["tauri/custom-protocol"]
